change prefix notifier in tmux status bar

--- a/shiva/.tmux.conf
+++ b/shiva/.tmux.conf
@@ -5,7 +5,7 @@ set -g default-terminal tmux-256color
 bind r source-file ~/.tmux.conf
 
 # remove the clock from the status bar
-set -g status-right '#{?client_prefix,#[reverse]!!!#[noreverse],} "#{=21:pane_title}"'
+set -g status-right '#{?client_prefix,#[reverse]^B#[noreverse],} "#{=21:pane_title}"'
 
 # prompt to join panes with @
 bind-key @ command-prompt -p "create pane from:" "join-pane -h -s :%%"
