add C-l to tmux config

--- a/shiva/.tmux.conf
+++ b/shiva/.tmux.conf
@@ -14,4 +14,7 @@ bind-key @ command-prompt -p "create pane from:" "join-pane -h -s :%%"
 set -g set-titles on
 #set -g set-titles-string "#T"
 
+# treat C-l the same as l so i can stop worrying about having to lift up the control key
+bind C-l last-window
+
 # vim: set ft=conf
