enable truecolor in tmux sessions

--- a/shiva/dot-tmux.conf
+++ b/shiva/dot-tmux.conf
@@ -14,6 +14,9 @@ bind-key @ command-prompt -p "create pane from:" "join-pane -h -s :%%"
 set -g set-titles on
 #set -g set-titles-string "#T"
 
+# enable "true color" when $TERM is 'xterm-256color'
+set -ga terminal-overrides ",xterm-256color:Tc"
+
 # treat C-l the same as l so i can stop worrying about having to lift up the control key
 bind C-l last-window
 
